CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(YouCommon VERSION 0.1 LANGUAGES CXX)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network core)
FIND_PACKAGE(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network core)

SET(PROJECT_SOURCES
    AboutWindow.ui
    AboutWindow.h
    AboutWindow.cpp

    LoadingWindow.ui
    LoadingWindow.h
    LoadingWindow.cpp

    LoginWindow.ui
    LoginWindow.h
    LoginWindow.cpp

    LoadingTimerThread.h
    LoadingTimerThread.cpp

    MediaEyeApplication.h
    MediaEyeApplication.cpp

    MediaEyeCommon.h
    MediaEyeCommon.cpp

    EyerQFlowLayout.h
    EyerQFlowLayout.cpp
)


ADD_LIBRARY(YouCommon
    ${PROJECT_SOURCES}
)

TARGET_LINK_LIBRARIES(YouCommon PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Network
)

SET_TARGET_PROPERTIES(YouCommon PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

INSTALL(TARGETS YouCommon
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
